--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Wendy Bite | About Me</title>
   <link rel = "stylesheet" href="style.css">
+    <link href = "https://fonts.googleapis.com/css?family=Droid+Serif|Raleway:400,500,600,700" rel="stylesheet" type="">
 </head>
 <body>
 
